# Collier

./: .dockerignore  .gitignore  .mcp.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOLT_REMOTE.md  Dockerfile.dev  README.md  eslint.config.js  index.html  knip.json  manifest  package-lock.json  package.json  renovate.json  tsconfig.json  vite.config.ts
.beads/: config.yaml  metadata.json
.claude/agents/: cleanup-analyzer.md
.github/workflows/: build.yml  ci.yml  e2e.yml  release.yml  rust-check.yml
docs/: CONSTITUTION.md  CONTRIBUTING.md  MAC_CODE_SIGNING.md  SECURITY.md  USING_THIS_TEMPLATE.md  tasks.md  visual-qa.md
docs/developer/: architecture-guide.md  bundle-optimization.md  cross-platform.md  data-persistence.md  releases.md  rust-architecture.md  tauri-commands.md  tauri-plugins.md  testing.md  ui-patterns.md  writing-ast-grep-rules.md
docs/specs/: m0-foundation.md  m1-issue-core.md  m3-depgraph.md  m4-realtime-sync.md  m5-accessibility.md  m6-comments-gates-statuses.md
locales/: ar.json  de.json  en.json  fr.json
scripts/: check-bundle-size.js  complete-task.js  macos-self-sign-setup.sh  make-fixture.sh  make-large-fixture.sh  make-second-fixture.sh  prepare-release.js
src/: App.test.tsx  App.tsx  main.tsx  theme-variables.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  desktop.json  quick-pane.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  lib.rs  types.rs
src-tauri/src/beads/: detect.rs  envelope.rs  gates.rs  graph.rs  jsonl.rs  list.rs  lock.rs  mod.rs  mutations.rs  ready_blocked.rs  runner.rs  search_query.rs  show_history.rs  statuses.rs  test_fixture.rs  types.rs  watcher.rs
src-tauri/src/bindings/: types.rs
src-tauri/src/commands/: app_metadata.rs  diagnostic_log.rs  mod.rs  notifications.rs  preferences.rs  recent_repos.rs  recovery.rs  workspace_list.rs
src-tauri/tests/: fixture.rs  graph.rs
src-tauri/tests/common/: mod.rs
src/components/: ErrorBoundary.test.tsx  ThemeProvider.test.tsx
src/hooks/: use-command-context.test.ts  use-keyboard-navigation.test.ts  use-keyboard-navigation.ts  use-keyboard-shortcuts.test.ts  use-keyboard-shortcuts.ts  use-mobile.test.ts  use-mobile.ts  use-theme.test.tsx  useBeadList.test.tsx  useBeadList.ts  useBeadsInvalidation.test.tsx  useBeadsInvalidation.ts  useBeadsRealtimeSync.test.tsx  useBeadsRealtimeSync.ts  useCopyAndFlag.ts  useCopyToClipboard.ts  useDialogA11y.test.tsx  useDialogA11y.ts  useIssueFieldUpdate.test.tsx  useIssueFieldUpdate.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMainWindowEventListeners.test.ts  useNotifications.test.ts  useNotifications.ts  useSquareCornersEffect.test.ts  useStatusCatalog.test.tsx  useStatusCatalog.ts
src/i18n/: i18n.test.ts  language-init.test.ts  locale-parity.test.ts
src/lib/: bindings.ts  design-tokens.test.ts  design-tokens.ts  error-format.test.ts  error-format.ts  form-styles.test.ts  form-styles.ts  logger.test.ts  logger.ts  menu.test.ts  menu.ts  notifications.test.ts  notifications.ts  platform-strings.test.ts  recovery.test.ts  recovery.ts  release-pipeline.test.ts  tauri-bindings.ts  theme-context.test.ts
src/services/: preferences.ts  (+1 more)
(+270 files in other folders)
