[package]
name = "collier"
version = "0.1.0"
description = "A desktop graphical user interface for Beads."
authors = ["Fabian Baumgartner"]
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
log = "0.4"
regex = "1"

# Filesystem watcher for the Beads `.beads/` directory. Justification: no
# reliable cross-platform fs-watch exists in JS, and the watcher must
# survive a JS panic (it lives on the Rust side as a tauri-managed state).
# `notify-debouncer-mini` provides a fixed-window debounce on top of
# `notify::RecommendedWatcher`, which is the simplest debouncer that
# meets our 250ms requirement without bringing in the larger
# `notify-debouncer-full` rename-detection machinery we don't need.
notify = "8"
notify-debouncer-mini = "0.7"

# Type-safe Tauri command bindings
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json", "chrono"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "=0.0.9"

# Transitive-dependency pin (NOT used directly in our code). `cookie 0.18.1` —
# pulled in by Tauri core — fails to compile against `time` >= 0.3.48 due to an
# E0119 coherence conflict. Constraining `time` here makes Cargo's resolver
# refuse the broken version, so a plain `cargo update` stays safe and green.
# Remove this line once `cookie` (or `time`) ships a compatible release.
time = "=0.3.47"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# macOS-only: NSPanel for native panel behavior (fullscreen overlay, click-outside dismiss)
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[dev-dependencies]
tempfile = "3"

# Optimize for smaller binary size in release builds
[profile.release]
codegen-units = 1        # Better LLVM optimization (slower build, smaller binary)
lto = true               # Link-time optimizations
opt-level = "s"          # Optimize for size over speed
panic = "abort"          # Don't include panic unwinding code
strip = true             # Remove debug symbols

